restructure of project